# ratatui_2048

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  lib.rs.disabled  main.rs
src/app/: ascii.rs  entry.rs  math.rs  mod.rs  start.rs  structs.rs  time.rs  utils.rs
src/app/data/: dummy.rs  jni.rs  mod.rs
src/app/dialog/: mod.rs
src/app/gameplay/: colors.rs  fx.rs  mod.rs  movement.rs
src/app/manage/: mod.rs
src/app/menu/: novak.txt
src/app/ranking/: mod.rs
src/app/screens/: dialog.rs  gameplay.rs  manage.rs  menu.rs  mod.rs  oobe.rs  ranking.rs  simple_ranking.rs
