[package]
name = "tui2048"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "tui2048_bin"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["std", "clock"] }
crossterm = "0.28.1"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif"] }
indoc = "2.0.6"
itoa = "1.0.15"
jni = "0.21.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
ratatui-image = "5.0.0"
tui-rain = "1.0.1"
tui-textarea = "0.7.0"
unicode-width = "0.2.0"

[profile.release]
opt-level = 3
strip = true
lto = true

[profile.release.package."*"]
opt-level = 3
